# desk-broker-nextclud-paperless

./: .gitignore  INSTALL.md  Makefile  README.md  invoice-extraction-rulesets-v0.7.7.patch  pyproject.toml
configs/: config.example.yaml
integrations/macos/: README.md
integrations/nautilus/: An Paperless senden  README.md  install-nautilus.sh
integrations/windows/: install-context-menu.ps1
invoice_extract/: README.md
invoice_extract/templates/de/: aldi_receipt.yml  berlin_parking_fine.yml  ihr_punkt_receipt.yml  jet_tankstelle_receipt.yml  kaufland_receipt.yml  lidl_receipt.yml  rewe_receipt.yml  rossmann_receipt.yml  updraftplus.yml
invoice_extract/tools/: test_one.sh
paperless_nc_import/: cli.py  community_learning.py  config.py  deadline.py  deck_client.py  effort.py  extraction.py  extraction_rulesets.py  fs_utils.py  importer.py  logging_utils.py  metadata_cache.py  models.py  nextcloud_config.py  nextcloud_journal.py  nextcloud_links.py  ocr.py  paperless_client.py  sidecar.py  state.py  trash.py  validators.py
paperless_nc_import/analytics/: __init__.py  duckdb_store.py
paperless_nc_import/extractors/: __init__.py  base.py  generic_text.py  invoice2data_adapter.py  normalizers.py  paddleocr_layout_amount.py  paddleocr_layout_date.py  paddleocr_sidecar.py  paddleocr_worker.py  rulesets.py  structured_invoice.py
paperless_nc_import/gui/: main_window.py  pdf_viewer.py  widgets.py
paperless_nc_import/rulesets/builtin/de/: README.md  amount_total.json  (+4 more)
scripts/: apply-extractor-adapter-patch.sh  debug-date-extraction.sh  install-from-git.sh  install-paddleocr-sidecar.sh  precache-paddleocr.sh  test-paddleocr-sidecar.sh  validate_rulesets.py
tests/: test_analytics_duckdb.py  test_community_learning.py  test_config_extraction.py  test_deadline.py  test_effort.py  test_extraction.py  test_extractor_adapters.py  test_iban.py  test_number_parsing.py  test_paddleocr_layout_amount.py  test_paddleocr_layout_date.py  test_paddleocr_layout_date_optimized.py  test_paddleocr_layout_date_v2.py  test_paddleocr_sidecar.py
