[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperless-nc-import"
version = "0.7.8"
description = "Desktop importer for Paperless-ngx with Nextcloud reverse links"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Fuenfstuecks / local workflow prototype"}
]
dependencies = [
  "PySide6>=6.6",
  "PyYAML>=6.0",
  "requests>=2.31",
  "Send2Trash>=1.8",
  "holidays>=0.58",
  "dateparser>=1.2",
  "python-stdnum>=1.20",
]

[project.optional-dependencies]
invoice = [
  "invoice2data>=0.4",
  "factur-x>=3.8",
]
analytics = [
  "duckdb>=1.0",
]
layout = [
  "docling>=2.0",
]
all-extractors = [
  "invoice2data>=0.4",
  "factur-x>=3.8",
  "duckdb>=1.0",
  "docling>=2.0",
]

[project.scripts]
paperless-nc-import = "paperless_nc_import.cli:main"

[tool.setuptools.packages.find]
include = ["paperless_nc_import*"]

[tool.setuptools.package-data]
paperless_nc_import = ["rulesets/**/*.json", "rulesets/**/*.yaml", "rulesets/**/*.yml", "rulesets/**/*.md"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
